# pharmaguard

./: .env.example  .gitignore  Dockerfile  GITHUB_RELEASE_GUIDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
docs/: ARCHITECTURE.md
src/pharmaguard/: __init__.py  cli.py  config.py
src/pharmaguard/api/: __init__.py  api_server.py
src/pharmaguard/dashboard/: __init__.py  app.py
src/pharmaguard/ddi_detector/: __init__.py
src/pharmaguard/ddi_detector/models/: __init__.py  gat_model.py
src/pharmaguard/medkg/: __init__.py
src/pharmaguard/medkg/kg_builder/: __init__.py  knowledge_graph.py
src/pharmaguard/risk_assessor/: __init__.py
src/pharmaguard/risk_assessor/scoring/: __init__.py  polypharmacy_scorer.py
src/pharmaguard/saferx_agent/: __init__.py
src/pharmaguard/saferx_agent/clinical/: __init__.py  coordinator.py
src/pharmaguard/xai_explainer/: __init__.py  shap_explainer.py
tests/: __init__.py  test_core.py
